Closed
Bug 904620
Opened 12 years ago
Closed 12 years ago
WebGL hangs in SurfaceStream_TripleBuffer_Async::WaitForCompositor
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
VERIFIED
FIXED
mozilla26
| Tracking | Status | |
|---|---|---|
| firefox24 | --- | unaffected |
| firefox25 | + | verified |
| firefox26 | + | verified |
People
(Reporter: BenWa, Assigned: mattwoodrow)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
84.65 KB,
text/plain
|
Details | |
|
3.72 KB,
patch
|
nrc
:
review+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
STR:
1) Open: http://glecollinet.github.io/webgl-demo/
I get a hang with nightly on 10.8
Comment 1•12 years ago
|
||
Same 10.9, bisecting...
Comment 2•12 years ago
|
||
I'm having trouble to compile on 10.9, but here is the window I already have by the ftp:
- ok: ff0a372e3170 (2013-07-15-03-02-02)
- ok: c2b375f3a909 (2013-07-31-03-02-03)
- ok: 76a944fa6b25 (2013-08-02-03-02-04)
- bad: d0edf8086809 (2013-08-03-03-02-05)
- bad: 0a63cd911b4f (2013-08-04-03-02-07)
- bad: 1fb5d14e8348 (2013-08-07-03-02-16)
Updated•12 years ago
|
status-firefox25:
--- → affected
status-firefox26:
--- → affected
Updated•12 years ago
|
Keywords: regressionwindow-wanted
This appeared for me for the first time in Firefox Nightly 8-3-2013.
http://ftp.mozilla.org/pub/mozilla.org/firefox/nightly/2013-08-03-03-02-05-mozilla-central/
I'm running on a Mac 10.8.
This is blocking partner contract work for Firefox OS.
I took a sample with Activity Monitor on Mac OS X to add more information about the hang.
Severity: normal → major
| Reporter | ||
Updated•12 years ago
|
tracking-firefox25:
--- → ?
tracking-firefox26:
--- → ?
Comment 5•12 years ago
|
||
This does not appear to affect windows or linux.
Comment 7•12 years ago
|
||
Odds are high that this is:
904611
Summary: WebGL bounce demo hangs Firefox → WebGL hangs in SurfaceStream_TripleBuffer_Async::WaitForCompositor
Updated•12 years ago
|
Comment 8•12 years ago
|
||
I suspect bug 900188. Mattwoodrow?
It looks like this patch makes it so we don't always SwapConsumer anymore, which will hang SwapProducer if SP is called twice before SC is called.
Flags: needinfo?(matt.woodrow)
| Assignee | ||
Comment 9•12 years ago
|
||
Looks like we just cancel the transaction if it's empty, and never schedule a composite.
We could add an explicit 'composite using the existing surface' message or type, but I don't think it's worth it.
Attachment #790987 -
Flags: review?(ncameron)
Flags: needinfo?(matt.woodrow)
Updated•12 years ago
|
Attachment #790987 -
Flags: review?(ncameron) → review+
Updated•12 years ago
|
Assignee: nobody → matt.woodrow
status-firefox24:
--- → unaffected
Keywords: regressionwindow-wanted → regression
| Assignee | ||
Comment 10•12 years ago
|
||
Comment 11•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
Comment 12•12 years ago
|
||
btw, this bug was a regression from bug 900188 in Nightly 25 build 2013-08-03.
Blocks: 900188
| Assignee | ||
Comment 14•12 years ago
|
||
Comment on attachment 790987 [details] [diff] [review]
Always send the SurfaceStream across
[Approval Request Comment]
Bug caused by (feature/regressing bug #): Bug 900188
User impact if declined: Hangs with WebGL content
Testing completed (on m-c, etc.): Been on m-c for weeks.
Risk to taking this patch (and alternatives if risky): Very low risk, just disables a (broken) optimization.
String or IDL/UUID changes made by this patch: None
Attachment #790987 -
Flags: approval-mozilla-aurora?
Comment 15•12 years ago
|
||
Comment on attachment 790987 [details] [diff] [review]
Always send the SurfaceStream across
[Triage Comment]
itym beta nomination since this is already marked fixed on 26 (Aurora).
Attachment #790987 -
Flags: approval-mozilla-aurora? → approval-mozilla-beta+
Comment 16•12 years ago
|
||
Flags: needinfo?(matt.woodrow)
Comment 17•12 years ago
|
||
Updated•12 years ago
|
Flags: needinfo?(matt.woodrow)
Keywords: branch-patch-needed
| Assignee | ||
Comment 18•12 years ago
|
||
I think we need bug 912173 to be uplifted with it.
Flags: needinfo?(matt.woodrow)
Comment 20•12 years ago
|
||
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:25.0) Gecko/20100101 Firefox/25.0
Build ID: 20130926170421
The situation looks pretty bad on Mac OS X and Firefox 25 beta 3:
https://moztrap.mozilla.org/results/cases/?filter-run=2331
Will this get uplifted to Firefox 25?
Comment 21•12 years ago
|
||
(In reply to Simona B [QA] from comment #20)
> Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:25.0) Gecko/20100101
> Firefox/25.0
> Build ID: 20130926170421
>
> The situation looks pretty bad on Mac OS X and Firefox 25 beta 3:
> https://moztrap.mozilla.org/results/cases/?filter-run=2331
>
> Will this get uplifted to Firefox 25?
Still waiting on bug 912173 to be uplifted which was just requested yesterday.
Comment 22•12 years ago
|
||
(In reply to Anthony Hughes, Mozilla QA (:ashughes) from comment #21)
> (In reply to Simona B [QA] from comment #20)
> > Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:25.0) Gecko/20100101
> > Firefox/25.0
> > Build ID: 20130926170421
> >
> > The situation looks pretty bad on Mac OS X and Firefox 25 beta 3:
> > https://moztrap.mozilla.org/results/cases/?filter-run=2331
> >
> > Will this get uplifted to Firefox 25?
>
> Still waiting on bug 912173 to be uplifted which was just requested
> yesterday.
That patch is now approved for Beta 25.
Comment 23•12 years ago
|
||
Comment 24•12 years ago
|
||
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:25.0) Gecko/20100101 Firefox/25.0
Looks good now on Firefox 25 beta 4 (buildID: 20131001024718) and latest Aurora (buildID: 20131002004002) after running the tests from the testrun wrote in comment 20.
Status: RESOLVED → VERIFIED
Keywords: verifyme
Updated•12 years ago
|
Keywords: branch-patch-needed
You need to log in
before you can comment on or make changes to this bug.
Description
•