Bug 904620 - Always send a transaction when we get a WebGL update to ensure that we get a composite. r=nrc